tools/kube-prometheus-stack/conf/grafana/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  labels:
    name: grafana
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
    - hosts:
        - grafana.kubernetes.jakubkubacki.com
      secretName: grafana-tls
  rules:
    - host: grafana.kubernetes.jakubkubacki.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 3000
